// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyButton component shows correct text with actionType prop: Add 1`] = `
<div
  className="propertyButton sc-bdVaJa eZMaBW"
>
  Add
   property
</div>
`;

exports[`PropertyButton component shows correct text with actionType prop: Remove 1`] = `
<div
  className="propertyButton sc-bdVaJa eZMaBW"
>
  Remove
   property
</div>
`;
